--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -108,6 +108,11 @@ footer span, footer span a {
 	line-height: 1.1;
 }
 
+.jumbotron h2 {
+	font-size: 22px;
+	line-height: 1;
+}
+
 #identify.jumbotron {
 	margin-top: 40px;
 	padding: 25px 0 50px 0;
