--- a/app/templates/manage/moderator/portal.twig
+++ b/app/templates/manage/moderator/portal.twig
@@ -18,22 +18,35 @@
 			<div class="col-md-8">
 				<h2>{% trans %}Queues{% endtrans %}</h2>
 				<h3>{% trans %}Addons{% endtrans %}</h3>
-				{% if submitted %}
+				{% if addons %}
 					<table class="table">
 						<tr><th>{% trans %}Addon{% endtrans %}</th><th>{% trans %}Requested namespace{% endtrans %}</th><th>{% trans %}User{% endtrans %}</th></tr>
-					{% for request in submitted %}
+						{% for request in addons %}
 						<tr>
 							<td>{{request.addon.title}} {% include 'functions/tags/game.twig' with {'game' : games[request.addon.game]} %}</td>
 							<td><a href="{{base}}/moderator/approve/{{request.addon.id}}"><strong>{{request.namespace}}</strong></a></td>
 							<td>{% include 'functions/user.twig' with {'user': request.user} %}</td>
 						</tr>
-					{% endfor %}
+						{% endfor %}
 					</table>
 				{% else %}
 					<div class="alert alert-info">{% trans %}There are no addons in the approval queue.{% endtrans %}</div>
 				{% endif %}
 				<h3>{% trans %}Contact form{% endtrans %}</h3>
-				<p class="alert alert-info">{% trans %}There are no new messages in the queue.{% endtrans %}</p>
+				{% if tickets %}
+					<table class="table">
+						<tr><th>{% trans %}Timestamp{% endtrans %}</th><th>{% trans %}Request{% endtrans %}</th><th>{% trans %}User{% endtrans %}</th></tr>
+						{% for request in tickets %}
+						<tr>
+							<td>{{request.submitted}}</td>
+							<td><a href="{{base}}/moderator/ticket/{{request.id}}" class="text">"{{ request.request|length > 50 ? request.request|slice(0, 50) ~ '…' : request.request }}"</a></td>
+							<td>{% if request.user %}{% include 'functions/user.twig' with {'user': request.user} %}{% else %}{% trans "Anonymous" %}{% endif %}</td>
+						</tr>
+						{% endfor %}
+					</table>
+				{% else %}
+					<p class="alert alert-info">{% trans %}There are no new messages in the queue.{% endtrans %}</p>
+				{% endif %}
 			</div>
 		</div>
 	</div>
