update edit release dependency/files pages

--- a/app/templates/publish/release/dependencies.twig
+++ b/app/templates/publish/release/dependencies.twig
@@ -34,7 +34,5 @@
 		</div>
 	</div>
 </div>
-<div class="form-group">
-	<button type="submit" class="btn btn-success inline" name="add-dependency-add" disabled>{% trans %}Add dependency{% endtrans %}</button>
-</div>
-<div class="help-block">{% trans %}Users may download the release together with it's dependencies.{% endtrans %}</div>
+<button type="submit" class="btn btn-success inline" name="add-dependency-add" disabled>{% trans %}Add dependency{% endtrans %}</button>
+<p class="help-block">{% trans %}Users may download the release together with it's dependencies.{% endtrans %}</p>
