--- a/app/templates/publish/release/files.twig
+++ b/app/templates/publish/release/files.twig
@@ -33,7 +33,7 @@
 			<button type="button" id="resumable-select" class="btn btn-default" disabled>{% trans "Select" %}</button>
 			<button type="button" id="resumable-upload" class="btn btn-success" disabled>{% trans "Upload / Continue" %}</button>
 			<button type="button" id="resumable-pause" class="btn btn-success" disabled><span class="glyphicon glyphicon-pause"></span> {% trans "Pause" %}</button>
+			<p class="help-block">{% trans %}The files will only be made availabe after publishing this release and cannot be changed afterwards.{% endtrans %}</p>
 		{% endif %}
-		<div class="help-block">{% trans %}The files will only be made availabe after publishing this release and cannot be changed afterwards.{% endtrans %}</div>
 	</div>
 </div>
