make about page more responsive

--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -90,7 +90,7 @@
 					<a href="https://beheh.de/">Benedict Etzel</a> <span class="text-muted">/ <a href="{{base}}/users/B_E" class="text-muted">B_E</a></span></dt>
 					<dd>founder & developer.</dd>
 				</div>
-				<hr>
+				<hr class="hidden-xs hidden-sm">
 				<h3 id="credits">{% trans "Credits" %}</h3>
 				<dl>
 					<dt><span class="text-muted">thanking the</span> <a href="http://clonkspot.org/">Clonkspot community</a>
