--- a/app/templates/publish/edit.twig
+++ b/app/templates/publish/edit.twig
@@ -4,7 +4,7 @@
 	<div class="page-header">
 		<div class="breakout"><a href="{{base}}/publish"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span></a></div>
 		<div class="container">
-			<h1><a href="#basic">{{heading}}</a> <small><a href="#releases"><span class="glyphicon glyphicon-plus"></span></a></small></h1>
+			<h1><a href="#basic">{{heading}}</a> <small>{% include 'functions/tags/game.twig' with {'game' : game, 'nolink' : true} %}</small></h1>
 		</div>
 	</div>
 	<div class="container">
