--- a/app/templates/publish/release/files.twig
+++ b/app/templates/publish/release/files.twig
@@ -29,13 +29,13 @@
 		</ul>
 		<ul class="list-group" id="resumable-files">
 		</ul>
-		{% if enable.upload and can_upload %}
-			<div class="form-group">
-				<button type="button" id="resumable-select" class="btn btn-default" disabled>{% trans "Select file" %}</button>
-				<button type="button" id="resumable-upload" class="btn btn-success" disabled>{% trans "Upload" %}</button>
-				<button type="button" id="resumable-pause" class="btn btn-success" disabled>{% trans "Pause" %}</button>
-				<p class="help-block">{% trans %}The files will only be made availabe after publishing this release and cannot be changed afterwards.{% endtrans %}</p>
-			</div>
-		{% endif %}
 	</div>
 </div>
+{% if enable.upload and can_upload %}
+<div class="form-group">
+	<button type="button" id="resumable-select" class="btn btn-default" disabled>{% trans "Select file&hellip;" %}</button>
+	<button type="button" id="resumable-upload" class="btn btn-success" disabled>{% trans "Upload" %}</button>
+	<button type="button" id="resumable-pause" class="btn btn-success" disabled>{% trans "Pause" %}</button>
+	<p class="help-block">{% trans %}Files will only be made availabe after publishing this release and cannot be changed afterwards.{% endtrans %}</p>
+</div>
+{% endif %}
